--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>GtdNinja</title>
+  <title><%= yield(:title) %> | GTD Ninja App</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+<% #  <%= render 'layouts/header' %>
+    <div class="container">
+      <%= yield %>
+     <%  #<%= render 'layouts/footer' %>
+      <%= debug(params) if Rails.env.development? %>
+    </div>
 </body>
 </html>
