--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,13 @@
-<h1>Welcome to the Getting Things Done - Evernote Ninja App</h1>
+<div class="center jumbotron">
+  <h1>Welcome to the Getting Things Done - Evernote Ninja App</h1>
+    <h2>
+        This  is  the home  page  for the
+        <a  href="http://www.railstutorial.org/">Ruby on  Rails Tutorial</a>
+        sample  application.
+    </h2>
+    <%= link_to "Sign up  now!", signup_path,  class:  "btn  btn-lg  btn-primary"  %>
 
-#TODO: add link to login.. 
+    <p>#TODO: add link to login.. </p>
+</div>
+<%= link_to image_tag("logo.png",  alt:  "Evernote Logo"),
+                        'http://evernote.com/' %>
