--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,9 +1,14 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-/* Sass variable defintions */
-/* TODO: look up bootstrap color variable names */
+/* mixins, variables, etc. */
+$gray-medium-light: #eaeaea;
 $light-gray:  #777;
+@mixin box_sizing {
+  -moz-box-sizing:    border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing:         border-box;
+}
 
 /*  universal */
 body  {
@@ -22,8 +27,6 @@ section {
 }
 
 /*  typography  */
-
-
 h1, h2, h3, h4, h5, h6  {
     line-height:  1;
 }
@@ -85,23 +88,66 @@ footer  {
         }
     }
 }
-/* mixins, variables, etc. */
 
-$gray-medium-light: #eaeaea;
-
-/*
-@mixin box_sizing {
-  -moz-box-sizing:    border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing:         border-box;
+/*  forms   */
+input,  textarea,   select, .uneditable-input       {
+        border: 1px solid   #bbb;
+        width:  100%;
+        margin-bottom:  15px;
+        @include    box_sizing;
+}
+input   {
+        height: auto    !important;
+}
+#error_explanation  {
+        color:  red;
+        ul  {
+                color:  red;
+                margin: 0   0   30px    0;
+        }
+}
+.field_with_errors  {
+        @extend .has-error;
+        .form-control   {
+                color:  $state-danger-text;
+        }
 }
 
-*/
-
+/*  sidebar */
+aside   {
+        section.user_info   {
+                margin-top: 20px;
+        }
+        section {
+                padding:    10px    0;
+                margin-top: 20px;
+                &:first-child   {
+                        border: 0;
+                        padding-top:    0;
+                }
+                span    {
+                        display:    block;
+                        margin-bottom:  3px;
+                        line-height:    1;
+                }
+                h1  {
+                        font-size:  1.4em;
+                        text-align: left;
+                        letter-spacing: -1px;
+                        margin-bottom:  3px;
+                        margin-top: 0px;
+                }
+        }
+}
+.gravatar   {
+        float:  left;
+        margin-right:   10px;
+}
+.gravatar_edit  {
+        margin-top: 15px;
+}
 
 /* miscellaneous */
-
-/*
 .debug_dump {
   clear: both;
   float: left;
@@ -109,4 +155,3 @@ $gray-medium-light: #eaeaea;
   margin-top: 45px;
   @include box_sizing;
 }
-*/
