--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -160,6 +160,18 @@ aside   {
         margin-top: 15px;
 }
 
+/* Users index */
+.users {
+  list-style: none;
+  margin: 0;
+  li {
+    overflow: auto;
+    padding: 10px 0;
+    border-bottom: 1px solid $gray-lighter;
+  }
+}
+
+
 /* miscellaneous */
 .debug_dump {
   clear: both;
@@ -168,3 +180,4 @@ aside   {
   margin-top: 45px;
   @include box_sizing;
 }
+
